syntax = "proto3";
package service;
option go_package = "./proto";

message UserModel {
  uint32 id = 1;
  string user_name = 2;
  string email = 3;
  string status = 4;
  string birthday = 5;
  string signature = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
  int64 deleted_at = 9;
}